Se agregaron los botones copìar CURP y limpiar (recargar)

--- a/index.html
+++ b/index.html
@@ -122,7 +122,11 @@
             </select>
             <label for="salida">CURP:</label>
             <input type="text" name="salida" id="salida" readonly>
-            <p class="btn" id="btn_calcular">Calcular</p>
+            <p class="btn" id="btn_copiar">Copiar</p>
+            <div class="botonera">
+                <p class="btn" id="btn_limpiar">Limpiar</p>
+                <p class="btn" id="btn_calcular">Calcular</p>
+            </div>
         </form>
         <div class="descripcion">
             <p>
