Se modifico el contenido del titulo y la descripcion

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <div class="contenedor">
         <div class="titulo">
             <h1>
-                Generador de CURP<br>
-                (en desarrollo)
+                Generador de CURP
             </h1>
         </div>
         <form action="" class="formulario">
@@ -133,6 +132,7 @@
                 Ingresa la información solicitada en todos los campos y presiona el botón "Calcular" para obtener la CURP.<br>
                 <span class="resaltar_texto">Todos los campos son necesarios.</span><br>
                 <span class="resaltar_texto">Evita el uso de caracteres especiales (", ', -, ., *, etc.).</span>
+                <span class="resaltar_texto">El CURP generado no es oficial.</span>
             </p>
         </div>
     </div>    
