Se agregaron placeholders en los inputs que hacían falta

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </div>
         <form action="" class="formulario">
             <label for="Nombre">Nombre(s):</label>
-            <input type="text" id="Nombre">
+            <input type="text" id="Nombre" placeholder="Escribe el o los nombres">
             <label for="Apellido_Paterno">Apellido Paterno:</label>
-            <input type="text" id="Apellido_Paterno">
+            <input type="text" id="Apellido_Paterno" placeholder="Escribe el apellido paterno">
             <label for="Apellido_Materno">Apellido Materno:</label>
-            <input type="text" id="Apellido_Materno">
+            <input type="text" id="Apellido_Materno" placeholder="Escribe el apellido materno">
             <label for="dia_Nacimiento">Día de nacimiento:</label>
             <select id="dia_Nacimiento">
                 <option value="" disabled="" selected="">Selecciona el día de nacimiento</option>
@@ -120,7 +120,7 @@
                 <option value="NE">Nacido en el extranjero</option>
             </select>
             <label for="salida">CURP:</label>
-            <input type="text" name="salida" id="salida" readonly>
+            <input type="text" name="salida" id="salida" readonly placeholder="Tu CURP aparecerá aquí">
             <p class="btn" id="btn_copiar">Copiar</p>
             <div class="botonera">
                 <p class="btn" id="btn_limpiar">Limpiar</p>
