Se modifico el texto y estilos de la descripcion

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <p>
                 Ingresa la información solicitada en todos los campos y presiona el botón "Calcular" para obtener la CURP.<br>
                 <span class="resaltar_texto">Todos los campos son necesarios.</span><br>
-                <span class="resaltar_texto">Evita el uso de caracteres especiales (", ', -, ., *, etc.).</span>
+                <span class="resaltar_texto">Evita el uso de caracteres especiales (", ', -, ., *, etc.).</span><br>
                 <span class="resaltar_texto">El CURP generado no es oficial.</span>
             </p>
         </div>
