Se modificó la descripción

--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@
                 Ingresa la información solicitada en todos los campos y presiona el botón "Calcular" para obtener la CURP.<br>
                 <span class="resaltar_texto">Los campos con <span class="obligatorio">*</span> son obligatorios.</span><br>
                 <span class="resaltar_texto">Evita el uso de caracteres especiales (", ', -, ., *, etc.).</span><br>
-                <span class="resaltar_texto">El CURP generado no es oficial.</span>
+                <span class="resaltar_texto">El CURP generado no es oficial.</span><br>
+                <span class="resaltar_texto">Este sitio no almacena ningún dato ingresado.</span>
             </p>
         </div>
     </div>    
