--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
                 <span class="resaltar_texto">Los campos con <span class="obligatorio">*</span> son obligatorios.</span><br>
                 <span class="resaltar_texto">Evita el uso de caracteres especiales (", ', -, ., *, etc.).</span><br>
                 <span class="resaltar_texto">El CURP generado no es oficial.</span><br>
-                <span class="resaltar_texto">Este sitio no almacena ningún dato ingresado.</span>
+                <span class="resaltar_texto">Este sitio no almacena ningún dato ingresado.</span><br>
+                <span class="resaltar_texto">Puedes reportar cualquier falla o anomalía en el cálculo al área de estadística.</span>
             </p>
         </div>
     </div>    
