Se agrego en la descripcion un texto informando la version del aplicativo asi como sus estilos

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                 <span class="resaltar_texto">Este sitio no almacena ningún dato ingresado.</span><br>
                 <span class="resaltar_texto">Puedes reportar cualquier falla o anomalía en el cálculo al área de estadística.</span>
             </p>
+            <p class="version">Version 1.1</p>
         </div>
     </div>    
 </body>
