--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </select>
             <label for="salida">CURP:</label>
             <input type="text" name="salida" id="salida" readonly placeholder="Tu CURP aparecerá aquí">
-            <p class="btn" id="btn_copiar">Copiar</p>
+            <!-- <p class="btn" id="btn_copiar">Copiar</p> -->
             <div class="botonera">
                 <p class="btn" id="btn_limpiar">Limpiar</p>
                 <p class="btn" id="btn_calcular">Calcular</p>
@@ -136,7 +136,7 @@
                 <span class="resaltar_texto">Este sitio no almacena ningún dato ingresado.</span><br>
                 <span class="resaltar_texto">Puedes reportar cualquier falla o anomalía en el cálculo al área de estadística.</span>
             </p>
-            <p class="version">Version 1.1</p>
+            <p class="version">Version 1.2</p>
         </div>
     </div>    
 </body>
