Se cambiaron los colores de los botones

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
             <input type="text" name="salida" id="salida" readonly placeholder="Tu CURP aparecerá aquí">
             <!-- <p class="btn" id="btn_copiar">Copiar</p> -->
             <div class="botonera">
-                <p class="btn btn_rojo" id="btn_limpiar">Limpiar</p>
-                <p class="btn btn_verde" id="btn_calcular">Calcular</p>
+                <p class="btn" id="btn_limpiar">Limpiar</p>
+                <p class="btn btn_resaltado" id="btn_calcular">Calcular ></p>
             </div>
         </form>
         <div class="descripcion">
