--- a/index.html
+++ b/index.html
@@ -79,45 +79,45 @@
             <label for="Sexo">Sexo de nacimiento <span class="obligatorio">* </span> :</label>
             <select id="Sexo">
                 <option value="" disabled="" selected="">Selecciona el Genero</option>
-                <option value="M">Femenino</option>
-                <option value="H">Masculino</option>
+                <option value="M">2.- Femenino</option>
+                <option value="H">1.- Masculino</option>
             </select>
             <label for="Entidad_Nacimiento">Entidad de nacimiento <span class="obligatorio">* </span> :</label>
             <select id="Entidad_Nacimiento">
                 <option value="" disabled="" selected="">Selecciona el estado</option>
-                <option value="AS">Aguascalientes</option>
-                <option value="BC">Baja California</option>
-                <option value="BS">Baja California Sur</option>
-                <option value="CC">Campeche</option>
-                <option value="CL">Coahuila</option>
-                <option value="CM">Colima</option>
-                <option value="CS">Chiapas</option>
-                <option value="CH">Chihuahua</option>
-                <option value="DF">Ciudad de México</option>
-                <option value="DG">Durango</option>
-                <option value="GT">Guanajuato</option>
-                <option value="GR">Guerrero</option>
-                <option value="HG">Hidalgo</option>
-                <option value="JC">Jalisco</option>
-                <option value="MC">Estado de México</option>
-                <option value="MN">Michoacán</option>
-                <option value="MS">Morelos</option>
-                <option value="NT">Nayarit</option>
-                <option value="NL">Nuevo León</option>
-                <option value="OC">Oaxaca</option>
-                <option value="PL">Puebla</option>
-                <option value="QT">Querétaro</option>
-                <option value="QR">Quintana Roo</option>
-                <option value="SP">San Luis Potosí</option>
-                <option value="SL">Sinaloa</option>
-                <option value="SR">Sonora</option>
-                <option value="TC">Tabasco</option>
-                <option value="TS">Tamaulipas</option>
-                <option value="TL">Tlaxcala</option>
-                <option value="VZ">Veracruz</option>
-                <option value="YN">Yucatán</option>
-                <option value="ZS">Zacatecas</option>
-                <option value="NE">Nacido en el extranjero</option>
+                <option value="AS">01.- Aguascalientes</option>
+                <option value="BC">02.- Baja California</option>
+                <option value="BS">03.- Baja California Sur</option>
+                <option value="CC">04.- Campeche</option>
+                <option value="CL">05.- Coahuila de Zaragoza</option>
+                <option value="CM">06.- Colima</option>
+                <option value="CS">07.- Chiapas</option>
+                <option value="CH">08.- Chihuahua</option>
+                <option value="DF">09.- Ciudad de México</option>
+                <option value="DG">10.- Durango</option>
+                <option value="GT">11.- Guanajuato</option>
+                <option value="GR">12.- Guerrero</option>
+                <option value="HG">13.- Hidalgo</option>
+                <option value="JC">14.- Jalisco</option>
+                <option value="MC">15.- Estado de México</option>
+                <option value="MN">16.- Michoacán</option>
+                <option value="MS">17.- Morelos</option>
+                <option value="NT">18.- Nayarit</option>
+                <option value="NL">19.- Nuevo León</option>
+                <option value="OC">20.- Oaxaca</option>
+                <option value="PL">21.- Puebla</option>
+                <option value="QT">22.- Querétaro</option>
+                <option value="QR">23.- Quintana Roo</option>
+                <option value="SP">24.- San Luis Potosí</option>
+                <option value="SL">25.- Sinaloa</option>
+                <option value="SR">26.- Sonora</option>
+                <option value="TC">27.- Tabasco</option>
+                <option value="TS">28.- Tamaulipas</option>
+                <option value="TL">29.- Tlaxcala</option>
+                <option value="VZ">30.- Veracruz</option>
+                <option value="YN">31.- Yucatán</option>
+                <option value="ZS">32.- Zacatecas</option>
+                <option value="NE">33.- Nacido en el extranjero</option>
             </select>
             <label for="salida">CURP:</label>
             <input type="text" name="salida" id="salida" readonly placeholder="Tu CURP aparecerá aquí">
@@ -136,7 +136,7 @@
                 <span class="resaltar_texto">Este sitio no almacena ningún dato ingresado.</span><br>
                 <span class="resaltar_texto">Puedes reportar cualquier falla o anomalía en el cálculo al área de estadística.</span>
             </p>
-            <p class="version">Versión 1.2</p>
+            <p class="version">Versión 1.3</p>
         </div>
     </div>    
 </body>
