Se agregó la función quitar acentos, se modificaron los estilos, se modificó la descripción y botones

--- a/index.html
+++ b/index.html
@@ -124,20 +124,22 @@
             <input type="text" name="salida" id="salida" readonly placeholder="Tu CURP aparecerá aquí">
             <!-- <p class="btn" id="btn_copiar">Copiar</p> -->
             <div class="botonera">
-                <p class="btn" id="btn_limpiar">Limpiar</p>
-                <p class="btn btn_resaltado" id="btn_calcular">Calcular ></p>
+                <p class="btn" id="btn_limpiar">Limpiar 🔄</p>
+                <p class="btn btn_resaltado" id="btn_calcular">Calcular 🚀</p>
             </div>
         </form>
         <div class="descripcion">
             <p>
                 Ingresa la información solicitada en todos los campos y presiona el botón "Calcular" para obtener la CURP.<br>
-                <span class="resaltar_texto">Los campos con <span class="obligatorio">*</span> son obligatorios.</span><br>
-                <span class="resaltar_texto">Evita el uso de caracteres especiales (", ', -, ., *, etc.).</span><br>
-                <span class="resaltar_texto">El CURP generado no es oficial.</span><br>
-                <span class="resaltar_texto">Este sitio no almacena ningún dato ingresado.</span><br>
-                <span class="resaltar_texto">Puedes reportar cualquier falla o anomalía en el cálculo al área de estadística.</span>
+                <span class="resaltar_texto">·Los campos con <span class="obligatorio">*</span> son obligatorios.</span><br>
+                <span class="resaltar_texto">·Evita el uso de caracteres especiales (", ', -, ., *, etc.).</span><br>
+                <span class="resaltar_texto">·Puedes utilizar Ñ.</span><br>
+                <span class="resaltar_texto">·Evita el uso de acentos.</span><br>
+                <span class="resaltar_texto">·El CURP generado no es oficial.</span><br>
+                <span class="resaltar_texto">·Este sitio no almacena ningún dato ingresado.</span><br>
+                <span class="resaltar_texto">·Puedes reportar cualquier falla o anomalía en el cálculo al área de estadística.</span>
             </p>
-            <p class="version">Versión 1.3</p>
+            <p class="version">Versión 1.4</p>
         </div>
     </div>    
 </body>
