Se arregló el header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="estilos/css.css">
     <title>&gt; Generador de CURP &lt;</title>
 </head>
-Google tag (gtag.js)
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SRJS9L3FLT"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
