--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <title>&gt; Generador de CURP &lt;</title>
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-SRJS9L3FLT"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-SRJS9L3FLT"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-SRJS9L3FLT');
-</script>
+</script> -->
 <body id>
     <div class="container-btn-user-mode">
         <p id="btn-light-mode">Modo claro </p>
@@ -29,6 +29,9 @@
             <div class="aside">
                 <div class="titulo typing-container">
                     <h1>&gt; Generador de CURP &lt;</h1>
+                </div>
+                <div class="logo">
+                    <img src="img/logo.svg" alt="">
                 </div>
                 <div class="descripcion">
                     <p>
