Se cambio el diseño

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 Calcular
             </p>
         </div>
-        <div class="important-text">
+        <div class="instructions">
             <ul>
                 <li>Los campos con <span class="obligatorio">*</span> son obligatorios.</li>
                 <li>Evita el uso de caracteres especiales (", ', -, ., *, etc.).</li>
@@ -177,11 +177,13 @@
                 <li>Evita el uso de acentos.</li>
                 <li>El CURP generado no es oficial.</li>
                 <li>Este sitio no almacena ningún dato ingresado.</li>
-                <li>Puedes reportar cualquier falla o anomalía en el cálculo al área de estadística.</li>
+                <li>Puedes reportar cualquier falla o anomalía en el cálculo dando clic en el botón "Reportar" en la parte de abajo.</li>
             </ul>
         </div>
+    </div>
+    <div class="footer">
         <p class="version">Versión 1.5</p>
-    </div>     
+    </div>
 </body>
     <script src="scripts/scripts.js"></script>
 </html>
