Se agregaron botones para temas claro y obscuro

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Código escrito por Jesús Rodríguez -->
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,6 +23,10 @@
     <div class="container-header">
         <div class="logo">
             <img src="img/logo.svg" alt="logo">
+        </div>
+        <div class="container-btn-user-mode">
+            <p id="btn-light-mode">Modo claro </p>
+            <p id="btn-dark-mode">Modo obscuro</p>
         </div>
     </div>
     <div class="h1-container">
@@ -182,6 +186,13 @@
         </div>
     </div>
     <div class="footer">
+        <div class="submenu">
+            <ul>
+                <li>Hecho con ♥ por Jesús Robles</li>
+                <li><a href="mailto:rodriguez.robles93@gmail.com">Reportar</a></li>
+                <li><a href="https://www.buymeacoffee.com/rodriguezrz" target="_blank">Si te gusta mi trabajo, puedes apoyarme invitándome un café dando clic aquí</a></li>
+            </ul>
+        </div>
         <p class="version">Versión 1.5</p>
     </div>
 </body>
